tests/sema/pass/fixed_width_aliases.kl
int main() {
  int64 a = 42;
  int32 b = 42i32;
  int x = a;
  return x;
}
