tests/sema/fail/ref_return_local.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  int a = 1;
  return &a;
}
